--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,69 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Futura", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+@font-face {
+  font-family: "Futurist";
+  src: url(./assets/fonts/Futurist.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Futura";
+  src: url(./assets/fonts/Futura\ Book.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-weight: 100;
+  src: url(./assets/fonts/Futura\ Light.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-weight: 700;
+  src: url(./assets/fonts/Futura\ Bold.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-stretch: condensed;
+  src: url(./assets/fonts/Futura\ Condensed.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-stretch: condensed;
+  font-weight: 100;
+  src: url(./assets/fonts/Futura\ Light\ Condensed.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-stretch: condensed;
+  font-weight: 700;
+  src: url(./assets/fonts/Futura\ Bold\ Condensed.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-style: italic;
+  src: url(./assets/fonts/Futura\ Italic.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Futura";
+  font-style: italic;
+  font-stretch: condensed;
+  src: url(./assets/fonts/Futura\ Italic\ Condensed.otf) format("opentype");
 }
